Add navigation task solver, bad accuracy

--- a/aer2ecef_tryer.ipynb
+++ b/aer2ecef_tryer.ipynb
@@ -19,12 +19,178 @@
   },
   {
    "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pyubx2\n",
+      "  Obtaining dependency information for pyubx2 from https://files.pythonhosted.org/packages/1b/38/6790210673025c05f626c5359d4442fcc8477809171f22ab249a4c7c6be9/pyubx2-1.2.39-py3-none-any.whl.metadata\n",
+      "  Downloading pyubx2-1.2.39-py3-none-any.whl.metadata (30 kB)\n",
+      "Requirement already satisfied: pynmeagps>=1.0.33 in c:\\users\\kippe\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pyubx2) (1.0.33)\n",
+      "Requirement already satisfied: pyrtcm>=1.0.15 in c:\\users\\kippe\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pyubx2) (1.0.15)\n",
+      "Downloading pyubx2-1.2.39-py3-none-any.whl (72 kB)\n",
+      "   ---------------------------------------- 0.0/72.8 kB ? eta -:--:--\n",
+      "   ----------- ---------------------------- 20.5/72.8 kB 682.7 kB/s eta 0:00:01\n",
+      "   ---------------------------- ----------- 51.2/72.8 kB 660.6 kB/s eta 0:00:01\n",
+      "   ---------------------------------------- 72.8/72.8 kB 573.6 kB/s eta 0:00:00\n",
+      "Installing collected packages: pyubx2\n",
+      "Successfully installed pyubx2-1.2.39\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.2.1 -> 24.0\n",
+      "[notice] To update, run: C:\\Users\\kippe\\AppData\\Local\\Programs\\Python\\Python312\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pyubx2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-19T13:52:37.919226700Z",
+     "start_time": "2024-04-19T13:52:22.138691700Z"
+    }
+   },
+   "id": "98196870a57ac1e3",
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17906634.854358293\n",
+      "27599951.144695964\n",
+      "30239133.916406527\n",
+      "25784523.013627008\n",
+      "17796981.842838902\n",
+      "20553397.630108986\n",
+      "79253136431626.88\n",
+      "         Current function value: 23331138060.520416\n",
+      "         Iterations: 16\n",
+      "         Function evaluations: 87\n",
+      "         Gradient evaluations: 74\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kippe\\AppData\\Local\\Temp\\ipykernel_88592\\1129571046.py:28: OptimizeWarning: Unknown solver options: xtol\n",
+      "  xyzt = minimize(\n",
+      "C:\\Users\\kippe\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\scipy\\optimize\\_minimize.py:705: OptimizeWarning: Desired error not necessarily achieved due to precision loss.\n",
+      "  res = _minimize_bfgs(fun, x0, args, jac, callback, **options)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.optimize import minimize\n",
+    "import pickle, numpy as np\n",
+    "import Constants\n",
+    "from Transformations import *\n",
+    "import Minimizing\n",
+    "# with open('storage478046.999877142.log', 'rb') as storage_file:\n",
+    "#     storage = pickle.load(storage_file)\n",
+    "# good_eph = [satellite for satellite in storage.satellites.values()\n",
+    "#                     if satellite.eph is not None and satellite.rawx]\n",
+    "with open('5_calculation579460.000205107.log', 'rb') as eph_file:\n",
+    "    good_eph = pickle.load(eph_file)\n",
+    "    \n",
+    "TOW = 579460.000205107\n",
+    "# print(good_eph)\n",
+    "for sat in good_eph:\n",
+    "    E = np.array(sat.eph_coord)\n",
+    "    A = np.array(sat.alm_coord)\n",
+    "    print(np.linalg.norm(A-E))\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n",
+    "func = Minimizing.get_minimize_function(good_eph)\n",
+    "me = np.array(list(Constants.ECI) + [0])\n",
+    "print(func(me))\n",
+    "xyzt0 = np.array([0, 0, 0, 0])\n",
+    "# xyzt0 = np.array([-1e6, 3.5e6, 5e6, -1e-3])\n",
+    "xyzt = minimize(\n",
+    "                func,\n",
+    "                xyzt0,\n",
+    "                jac=Minimizing.get_minimize_derivative(good_eph),\n",
+    "                options={'xtol': 1e-8, 'disp': True, 'maxiter': 10000}\n",
+    "        )\n",
+    "xyz = xyzt.x[:3]\n",
+    "ecef = eci2ecef(TOW, *xyz)\n",
+    "lla = eci2lla(TOW, *xyz)\n",
+    "# print(np.linalg.norm(np.array(xyz)))\n",
+    "# print(np.linalg.norm(np.array(ecef)))\n",
+    "print(f'ECI xyz and dT: {xyzt.x}')\n",
+    "print(f'ECEF xyz: {ecef}')\n",
+    "print(f'LLA calculated:{lla}')\n",
+    "print(f'LLA my valid: {Constants.LLA}')\n",
+    "print(f'Full error: {np.linalg.norm(np.array(ecef) - np.array(Constants.ECEF))}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2024-04-20T17:56:18.233256200Z"
+    }
+   },
+   "id": "6ccd9bac9c878ce0",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "98196870a57ac1e3"
+   "id": "ebc6055dffbfd47d"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7f5bc0fcf724c9f"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4d99df194f35a66a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d6914666bcaab5b8"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9f86f38096000c15"
   },
   {
    "cell_type": "code",
