--- a/aer2ecef_tryer.ipynb
+++ b/aer2ecef_tryer.ipynb
@@ -68,25 +68,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17906634.854358293\n",
-      "27599951.144695964\n",
-      "30239133.916406527\n",
-      "25784523.013627008\n",
-      "17796981.842838902\n",
-      "20553397.630108986\n",
-      "79253136431626.88\n",
-      "         Current function value: 23331138060.520416\n",
-      "         Iterations: 16\n",
-      "         Function evaluations: 87\n",
-      "         Gradient evaluations: 74\n"
+      "17640991.25750333\n",
+      "28051607.614606958\n",
+      "30110271.972998984\n",
+      "25213646.081019744\n",
+      "18126821.61147473\n",
+      "19989859.99420869\n",
+      "20719244.11250142\n",
+      "4\n",
+      "ME: 51964060429424.97\n",
+      "         Current function value: 0.000000\n",
+      "         Iterations: 22\n",
+      "         Function evaluations: 46\n",
+      "         Gradient evaluations: 38\n",
+      "func: 2.7755575615628914e-17\n",
+      "jac: (-3.03436691481214e-09, 1.1365900121529576e-08, -5.367058936695426e-09, 4.467255741357803e-09)\n",
+      "ECI xyz and dT: [ 2663122.52389853 -2256019.57218648  4984234.09886257  -515855.32591748]\n",
+      "ECEF xyz: (2833990.304551736, 2037239.514905123, 4984234.098862572)\n",
+      "LLA calculated:(55.18693468067432, 35.71081015251094, -278992.352457156)\n",
+      "LLA my valid: [55.690555555555555, 37.858333333333334, 140]\n",
+      "Full error: 313986.81747776386\n",
+      "=======================================================\n",
+      "6.702754633462569 16.866111203101667 51.96667218609946\n",
+      "dT: -515855.32591747557\n",
+      "SV: 2\n",
+      "LLA coord of eph: (54.778574333712214, -2.599099294810358, 20609476.799185265), ECI: (3083735.0837371247, -15264679.893977871, 22023672.59776174)\n",
+      "Pseudorange: 21287006.71172188\n",
+      "Calcuated R: 24227862.69496601\n",
+      "Error: 2940855.9832441323\n",
+      "Correcet R + c*dT: 24073213.15883682\n",
+      "Error: 2786206.4471149407\n",
+      "-------------------\n",
+      "SV: 3\n",
+      "LLA coord of eph: (20.563028232794647, -26.29683814855313, 20071096.481122497), ECI: (-5266178.306825727, -24200168.805107825, 9275882.780136764)\n",
+      "Pseudorange: 23569552.149582583\n",
+      "Calcuated R: 27921538.535424158\n",
+      "Error: 4351986.3858415745\n",
+      "Correcet R + c*dT: 27766888.999294966\n",
+      "Error: 4197336.849712383\n",
+      "-------------------\n",
+      "SV: 8\n",
+      "LLA coord of eph: (6.956557292797008, 12.255401402283935, 20401543.510204043), ECI: (11767921.924898334, -23836185.707812116, 3238333.7481267625)\n",
+      "Pseudorange: 23332562.103576988\n",
+      "Calcuated R: 27606628.692118213\n",
+      "Error: 4274066.588541225\n",
+      "Correcet R + c*dT: 27451979.15598902\n",
+      "Error: 4119417.052412033\n",
+      "-------------------\n",
+      "SV: 14\n",
+      "LLA coord of eph: (32.8805984759661, -67.18090593189676, 20120890.127411187), ECI: (-17814568.83024119, -13346038.744851686, 14366266.396749528)\n",
+      "Pseudorange: 24952060.692096338\n",
+      "Calcuated R: 27423496.67334435\n",
+      "Error: 2471435.9812480137\n",
+      "Correcet R + c*dT: 27268847.13721516\n",
+      "Error: 2316786.445118822\n",
+      "-------------------\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kippe\\AppData\\Local\\Temp\\ipykernel_88592\\1129571046.py:28: OptimizeWarning: Unknown solver options: xtol\n",
-      "  xyzt = minimize(\n",
       "C:\\Users\\kippe\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\scipy\\optimize\\_minimize.py:705: OptimizeWarning: Desired error not necessarily achieved due to precision loss.\n",
       "  res = _minimize_bfgs(fun, x0, args, jac, callback, **options)\n"
      ]
@@ -102,10 +144,10 @@
     "#     storage = pickle.load(storage_file)\n",
     "# good_eph = [satellite for satellite in storage.satellites.values()\n",
     "#                     if satellite.eph is not None and satellite.rawx]\n",
-    "with open('5_calculation579460.000205107.log', 'rb') as eph_file:\n",
+    "with open('7_calculation579118.000331166.log', 'rb') as eph_file:\n",
     "    good_eph = pickle.load(eph_file)\n",
     "    \n",
-    "TOW = 579460.000205107\n",
+    "TOW = 579118.000331166\n",
     "# print(good_eph)\n",
     "for sat in good_eph:\n",
     "    E = np.array(sat.eph_coord)\n",
@@ -113,57 +155,233 @@
     "    print(np.linalg.norm(A-E))\n",
     "\n",
     "\n",
-    "    \n",
+    "# good_eph = good_eph[0:4] + [good_eph[5]]\n",
+    "good_eph = good_eph[:4]\n",
+    "# good_eph = good_eph[:5]\n",
     "\n",
+    "print(len(good_eph))\n",
     "func = Minimizing.get_minimize_function(good_eph)\n",
     "me = np.array(list(Constants.ECI) + [0])\n",
-    "print(func(me))\n",
+    "print(f'ME: {func(me)}')\n",
     "xyzt0 = np.array([0, 0, 0, 0])\n",
+    "# xyzt0 = np.array(list(Constants.ECI) + [0])\n",
+    "# xyzt0 = np.array([0, 0, 0, 0, 0])\n",
     "# xyzt0 = np.array([-1e6, 3.5e6, 5e6, -1e-3])\n",
     "xyzt = minimize(\n",
     "                func,\n",
     "                xyzt0,\n",
     "                jac=Minimizing.get_minimize_derivative(good_eph),\n",
-    "                options={'xtol': 1e-8, 'disp': True, 'maxiter': 10000}\n",
+    "                options={'disp': True, 'maxiter': 1000},\n",
+    "                tol=1e-12\n",
     "        )\n",
     "xyz = xyzt.x[:3]\n",
     "ecef = eci2ecef(TOW, *xyz)\n",
     "lla = eci2lla(TOW, *xyz)\n",
+    "jac=Minimizing.get_minimize_derivative(good_eph)\n",
+    "print(f'func: {func(xyzt.x)}')\n",
+    "# print(f'func: {func(xyzt.x + np.array([0, 0, 0, 0]))}')\n",
+    "print(f'jac: {jac(xyzt.x)}')\n",
     "# print(np.linalg.norm(np.array(xyz)))\n",
     "# print(np.linalg.norm(np.array(ecef)))\n",
     "print(f'ECI xyz and dT: {xyzt.x}')\n",
     "print(f'ECEF xyz: {ecef}')\n",
     "print(f'LLA calculated:{lla}')\n",
     "print(f'LLA my valid: {Constants.LLA}')\n",
-    "print(f'Full error: {np.linalg.norm(np.array(ecef) - np.array(Constants.ECEF))}')"
+    "print(f'Full error: {np.linalg.norm(np.array(ecef) - np.array(Constants.ECEF))}')\n",
+    "a = 0\n",
+    "print('=======================================================')\n",
+    "dT = xyzt.x[-1]\n",
+    "print((TOW/3600) / 24, (TOW/3600) % 24, (TOW %3600)/60)\n",
+    "print(f'dT: {dT}')\n",
+    "for satellite in good_eph:\n",
+    "    print(f'SV: {satellite.svId}')\n",
+    "    print(f'LLA coord of eph: {eci2lla(TOW, *satellite.eph_coord)}, ECI: {satellite.eph_coord}')\n",
+    "    # print(f'LLA coord of alm: {eci2lla(TOW, *satellite.alm_coord)}, ECI: {satellite.alm_coord}')\n",
+    "    R = np.linalg.norm(np.array(satellite.eph_coord) - np.array(Constants.ECI))\n",
+    "    print(f'Pseudorange: {satellite.rawx.prMes}')\n",
+    "    print(f'Calcuated R: {R}')\n",
+    "    print(f'Error: {abs(R-satellite.rawx.prMes)}')\n",
+    "    print(f'Correcet R + c*dT: {R + Constants.c * dT / Minimizing.TimeCoefficient}')\n",
+    "    print(f'Error: {abs(R + Constants.c*dT /Minimizing.TimeCoefficient - satellite.rawx.prMes)}')\n",
+    "    print('-------------------')\n",
+    "# b = 0\n",
+    "    "
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2024-04-20T17:56:18.233256200Z"
+     "end_time": "2024-04-23T16:08:44.859663100Z",
+     "start_time": "2024-04-23T16:08:44.751040300Z"
     }
    },
    "id": "6ccd9bac9c878ce0",
-   "execution_count": null
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.2336278706789017, 0.0, 2.2336278706789017, 0.0]\n",
+      "4.467255741357803\n"
+     ]
+    }
+   ],
+   "source": [
+    "# xyzt = xyzt.x\n",
+    "def dRho(satellite):\n",
+    "    return Minimizing.calc_rho(satellite, xyzt.x) + Constants.c * xyzt.x[3] / Minimizing.TimeCoefficient - satellite.rawx.prMes\n",
+    "x = list([2 * Constants.c * dRho(satellite) for satellite in good_eph])\n",
+    "print(x)\n",
+    "print(sum(x))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-23T15:52:15.210890500Z",
+     "start_time": "2024-04-23T15:52:15.071147700Z"
+    }
+   },
+   "id": "2f7df727bf5e6896",
+   "execution_count": 3
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "579118.000331166\n",
+      "[17, 2311, 147456, 0.013410091400146484, 0.008474349975585938, -2.6047928258776665e-09, 5153.6572265625, 0.5290583372116089, -0.4217498302459717, 0.8842452764511108, 0.0007104873657226562, 0.0, 0, 1, datetime.datetime(2024, 4, 20, 19, 51, 1, 480657, tzinfo=<DstTzInfo 'Europe/Moscow' MSK+3:00:00 STD>)]\n",
+      "1.035696\n",
+      "-173137.99966883403\n",
+      "2.2100573269787347\n",
+      "(-15490225.905241322, -4014787.60301065, 21593484.119341377)\n",
+      "(53.50304789949836, -89.4898395210575, 20512127.890603006)\n",
+      "[17, 2310, 583184, 583184, 8, 8, 232, -1.0118128557223827e-10, -2.5535200620652176e-09, -54.9375, 291.0625, 4.734843969345093e-06, -2.635642886161804e-06, 1.3969838619232178e-07, 1.9185245037078857e-07, 1.4808847481617704e-09, 0.3084875871427357, 0.013404096011072397, 5153.707925796509, -0.9651154428720474, 0.5678392145782709, -0.42194465594366193, 1.0803341865539551e-07, 0.0, -1.0231815394945443e-12, 0.0007107830606400967, 0, 0, datetime.datetime(2024, 4, 20, 19, 51, 24, 476365, tzinfo=<DstTzInfo 'Europe/Moscow' MSK+3:00:00 STD>)]\n",
+      "1.1\n",
+      "-4065.9996688340325\n",
+      "2.210199240599181\n",
+      "(-15489921.91203678, -4014860.142470004, 21593926.57235166)\n",
+      "(53.50408154358399, -89.48931500494149, 20512319.376517903)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import SatellitesCoordinateCalculator as SCC\n",
+    "from SatellitesCoordinateCalculator import *\n",
+    "N = 2310\n",
+    "i = 4\n",
+    "print(TOW)\n",
+    "print(good_eph[i].alm)\n",
+    "# for k in np.arange(1.03569, 1.03570, 0.000001):\n",
+    "#     print(k)\n",
+    "k = 1.035696\n",
+    "p1 = Acalc_sat_alm(good_eph[i].alm, TOW, N, k)\n",
+    "print(p1)\n",
+    "print(eci2lla(TOW, *p1))\n",
+    "print(good_eph[i].eph)\n",
+    "p2 = SCC.calc_sat_eph(good_eph[i].eph, TOW, N)\n",
+    "print(p2)\n",
+    "print(eci2lla(TOW, *p2))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-20T19:24:50.862823Z",
+     "start_time": "2024-04-20T19:24:50.765132Z"
+    }
+   },
+   "id": "ebc6055dffbfd47d",
+   "execution_count": 30
   },
   {
    "cell_type": "code",
    "outputs": [],
-   "source": [],
+   "source": [
+    "def check_time(time, *args, **kwargs):\n",
+    "    half_week = 302400.0\n",
+    "    if time > half_week:\n",
+    "        time -= 2 * half_week\n",
+    "    elif time < - half_week:\n",
+    "        time += 2 * half_week\n",
+    "    return time\n",
+    "\n",
+    "def Acalc_sat_alm(ALM: list or None, time, N, k):\n",
+    "    if ALM is None or not time or not N:\n",
+    "        return None\n",
+    "    # SV_ID, week, Toa, e, delta_i, Wdot, sqrtA, W0, w, M0, af0, af1, health, Data_ID, receiving_time = ALM\n",
+    "    SV_ID = ALM[0]  # ID спутника\n",
+    "    N0a = ALM[1]  # номер недели передаваемых данных\n",
+    "    Toa = ALM[2]  # опорное время внутри недели N, на которую передаются данные альманах\n",
+    "    e = ALM[3]  # эксцентриситет\n",
+    "    di = ALM[4] * pi  # rad, поправка к наклонению\n",
+    "    OmegaDot = ALM[5] * pi  # rad/s, скорость прецессии орбиты\n",
+    "    sqrtA = ALM[6]  # корень из большей полуоси\n",
+    "    Omega0 = ALM[7] * pi  # rad Угол восходящего узла на момент начала недели N\n",
+    "    omega = ALM[8] * pi  # rad аргумент перигея\n",
+    "    M0 = ALM[9] * pi  # rad средняя аномалия на эпоху Toa\n",
+    "    af0 = ALM[10]  #\n",
+    "    af1 = ALM[11]  #\n",
+    "    health = ALM[12]  #\n",
+    "    Data_ID = ALM[13]  #\n",
+    "    receiving_time: datetime = ALM[14]  # время принятия сигнала\n",
+    "\n",
+    "    CORRECTION_FACTOR = k#1.1\n",
+    "    print(CORRECTION_FACTOR)\n",
+    "\n",
+    "    OmegaEarthDot = Constants.OmegaEarthDot * CORRECTION_FACTOR\n",
+    "\n",
+    "    # mu = 3.9860044 * 1e14  # m^3/s^2 гравитационная постоянная для земли WGS-84\n",
+    "    # OmegaEarthDot = 7.2921151467 * 10e-5  # rad/s скорость вращения земли WGS-84\n",
+    "\n",
+    "    i0 = 0.30 * pi  # rad\n",
+    "\n",
+    "    a = sqrtA ** 2  # большая полуось\n",
+    "    n0 = sqrt(Constants.mu / a ** 3)  # rad/s вычисленное среднее перемещение\n",
+    "\n",
+    "    # TODO: добавить поправки генераторов\n",
+    "    tk = (N - N0a) * 604800 + time - Toa  # + 3600 * 6\n",
+    "    tk = check_time(tk)\n",
+    "    print(tk)\n",
+    "\n",
+    "    Mk = M0 + n0 * tk  # средняя аномалия\n",
+    "    ## Решение уравнения Mk = Ek - e * sin(Ek)\n",
+    "    Ek = Mk  # rad\n",
+    "    for i in range(20):\n",
+    "        Ek = Ek + (Mk - Ek + e * sin(Ek)) / (1 - e * cos(Ek))\n",
+    "    nu_k = atan2(\n",
+    "        sqrt(1 - e * e) * sin(Ek) / (1 - e * cos(Ek)),\n",
+    "        (cos(Ek) - e) / (1 - e * cos(Ek))\n",
+    "    )\n",
+    "    # r_k = a * (1 - e * cos(Ek)) / (1 + e * cos(Ek))\n",
+    "    r_k = a * (1 - e * cos(Ek))\n",
+    "    ik = i0 + di\n",
+    "    Omega_k = Omega0 + (OmegaDot - OmegaEarthDot) * tk - OmegaEarthDot * Toa\n",
+    "    print(Omega_k % pi)\n",
+    "    p = a * (1 - e * e)\n",
+    "    Vr = sqrt(Constants.mu / p) * e * sin(nu_k)\n",
+    "    Vn = sqrt(Constants.mu / p) * (1 + e * cos(nu_k))\n",
+    "    u_k = omega + nu_k\n",
+    "\n",
+    "    X = r_k * (cos(u_k) * cos(Omega_k) - sin(u_k) * sin(Omega_k) * cos(ik))\n",
+    "    Y = r_k * (cos(u_k) * sin(Omega_k) + sin(u_k) * cos(Omega_k) * cos(ik))\n",
+    "    Z = r_k * sin(u_k) * sin(ik)\n",
+    "\n",
+    "    return X, Y, Z"
+   ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-20T19:15:33.751907200Z",
+     "start_time": "2024-04-20T19:15:33.713664800Z"
+    }
    },
-   "id": "ebc6055dffbfd47d"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "7f5bc0fcf724c9f"
+   "id": "7f5bc0fcf724c9f",
+   "execution_count": 10
   },
   {
    "cell_type": "code",
