Refactoring and cleaning

--- a/SFRBX_GLONASS.ipynb
+++ b/SFRBX_GLONASS.ipynb
@@ -43,12 +43,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-23T06:58:26.759835Z",
-     "start_time": "2024-07-23T06:58:26.737878800Z"
+     "end_time": "2024-07-23T07:45:31.018009300Z",
+     "start_time": "2024-07-23T07:45:30.995946100Z"
     }
    },
    "id": "fedc6b38389ae417",
-   "execution_count": 23
+   "execution_count": 35
   },
   {
    "cell_type": "code",
@@ -57,28 +57,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:00:00.001995\n"
+      "0:00:00.002186\n"
      ]
     }
    ],
    "source": [
-    "import pickle\n",
-    "from datetime import datetime\n",
-    "import Constants\n",
-    "t1 = datetime.now(tz=Constants.tz_utc)\n",
-    "\n",
-    "t2 = datetime.now(tz=Constants.tz_utc)\n",
-    "print(t2-t1)  "
+    "# import pickle\n",
+    "# from datetime import datetime\n",
+    "# import Constants\n",
+    "# t1 = datetime.now(tz=Constants.tz_utc)\n",
+    "# SFRBX_GLONASS_PATH = 'glonass_sfrbx.plk'\n",
+    "# with open(SFRBX_GLONASS_PATH, 'wb') as file:\n",
+    "#     pickle.dump(gpe, file)\n",
+    "#     pickle.dump(gpa, file)\n",
+    "#     pickle.dump(gle, file)\n",
+    "#     pickle.dump(gla, file)\n",
+    "#     pickle.dump(gp_data, file)\n",
+    "# t2 = datetime.now(tz=Constants.tz_utc)\n",
+    "# print(t2-t1)  "
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-07-23T06:58:27.906099Z",
-     "start_time": "2024-07-23T06:58:27.889956700Z"
+     "end_time": "2024-07-23T07:06:34.711821300Z",
+     "start_time": "2024-07-23T07:06:34.699733500Z"
     }
    },
    "id": "6ce9dfa2162b05d9",
-   "execution_count": 24
+   "execution_count": 34
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "SFRBX_GLONASS_PATH = 'glonass_sfrbx.plk'\n",
+    "import pickle\n",
+    "with open(SFRBX_GLONASS_PATH, 'rb') as file:\n",
+    "    gpe = pickle.load(file)\n",
+    "    gpa = pickle.load(file)\n",
+    "    gle = pickle.load(file)\n",
+    "    gla = pickle.load(file)\n",
+    "    gp_data = pickle.load(file)\n",
+    "# gla1 == gla"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-07-23T07:47:13.793328Z",
+     "start_time": "2024-07-23T07:47:13.769693700Z"
+    }
+   },
+   "id": "207b3c4fb68d50aa",
+   "execution_count": 38
   },
   {
    "cell_type": "code",
